feat : DynamoDB에 훈련과정 생성, valid 예외처리, 테스트 성공과 setDuration이 음수이면 실패하는 테스트케이스 작성

--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,20 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// AWS SDK
+	implementation platform('software.amazon.awssdk:bom:2.29.50')
+	implementation 'software.amazon.awssdk:dynamodb-enhanced'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
