doc : Step3에서 경로가 없을시 resources경로 생성

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,9 @@ jobs:
           java-version: 21
 
       # Step 3: Create application.yml from Secrets
-      - name: Create application.yml from Secrets
+      - name: Create application.yaml from Secrets
         run: |
+          mkdir -p ./src/main/resources
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.yaml
 
       # Step 4: Docker 이미지 빌드
