doc : ecs-cluster iac에 ECSService name 지정

--- a/iac/ecs-cluster.yaml
+++ b/iac/ecs-cluster.yaml
@@ -122,6 +122,7 @@ Resources:
       TaskDefinition: !Ref ECSTaskDefinition
       LaunchType: FARGATE
       DesiredCount: 1
+      ServiceName: ahimmoyak-ecs-service
       NetworkConfiguration:
         AwsvpcConfiguration:
           Subnets:
