--- a/iac/ecs-cluster.yaml
+++ b/iac/ecs-cluster.yaml
@@ -106,6 +106,10 @@ Resources:
           FromPort: 8080
           ToPort: 8080
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
 
   # ECS Cluster
   ECSCluster:
