--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// Oauth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+
 	// AWS SDK
 	implementation platform('software.amazon.awssdk:bom:2.29.50')
 	implementation 'software.amazon.awssdk:dynamodb-enhanced'
@@ -40,6 +46,7 @@ dependencies {
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
